# hinguri-pingpong

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
cmake-modules/: FindDynamixelSDK.cmake  FindLinearMotor.cmake  OpenCVConfig.cmake
data/: cor.yml  top.yml
data/calibration/: left.yml  right.yml
data/points/: left_camera.yml  left_camera_og.yml  left_camera_og2.yml  right_camera.yml  right_camera_og.yml  right_camera_og2.yml  top_camera.yml  top_camera_og.yml  top_camera_og2.yml  world.yml
data/projection/: left.yml  left_og.yml  left_og2.yml  right.yml  right_og.yml  right_og3.yml  top.yml
python/: check_latency.py  find_cor.py  fps_threading.py  latency_clock.py
python/color_finder/: color_visualizer.py  hsv_click_logger.py  hsv_log.txt  hsv_range_by_mode.py  hsv_range_finder.py  hsv_range_result.txt  test code.py  visualize_hsv_range.py
src/: 2d_predictor.cpp  Constants.hpp  bridge.hpp  constants.hpp  control_end.cpp  detect_orange_balls.cpp  falling_test.cpp  for1st.cpp  main.cpp  object_detection.cpp  opencv_test.cpp  quadratic.cpp  quadratic_regression.cpp  simulation.cpp  simulator.cpp  sobel.cpp  sync_cameras.cpp  sync_cameras_live.cpp  version_arm.cpp  version_arm_1st.cpp  version_left_right_pnp.cpp  version_top_ignore_z.cpp  version_top_stereo.cpp  vision.cpp  vision_end.cpp  visualize.py
src/calibration/: preparer.cpp  single_calibration.cpp  solve_pnp.cpp  stereo_calibration.cpp
src/color finder/: # hsv_range_finder.py
src/control/: AXL.hpp  AXM.hpp  CLinear_actu.cpp  CLinear_actu.h  CLinear_actu.hpp  LinearActuator.hpp  control_end.cpp  control_end.hpp  dynamixel_actuator.hpp  hinguri.mot  linear_actuator.hpp  linear_motor.cpp  linear_motor.hpp  robot_arm_controller.hpp  robot_arm_test.cpp
src/dynamixel/: base_motor.h  dynamixel.cpp
src/predictor/: predictor.hpp
src/random/: random.hpp
src/simulation/: simulator_2d.hpp  simulator_property.hpp  simulator_side.hpp  simulator_top.hpp
src/simulator/: Simulator2D.hpp  simulator_property.hpp  simulator_side.hpp  simulator_top.hpp
src/stream/: webcam_video_stream.hpp
src/tracker/: circularity_based.hpp  contour.hpp  tracker.hpp
src/utils/: camera_type.hpp  capture_frame.hpp  constants.hpp  draw.hpp  log.hpp  sleep.hpp
src/vision/: bridge.hpp  calibrator.hpp  camera.hpp  camera_type.hpp  contour.hpp  depth_estimator.hpp  predictor.hpp  quadratic_regression.cpp  solve_pnp.cpp  tracker.hpp  vision_end.cpp  vision_end.hpp  visualizer.hpp
src/vision/pre/: calibrate.cpp  camera_points.cpp  chessboard_images.cpp  resize_camera_points.cpp  resize_chessboard_images.cpp  world_points.cpp
src/vision/pre/calibration/: get_chessboard_images.cpp  single_calibration.cpp
src/vision/pre/generate/: camera_points.cpp  chessboard_images.cpp  world_points.cpp
src/vision/pre/points/: get_camera_points.cpp  get_world_points.cpp
test/: Hinguri_Demo.cpp  thread_test.cpp
test/calibrate_test/: camera_point_world_point_test.cpp  top_camera_test.cpp  world_to_camera.cpp
test/control_demo/: Hinguri_Demo.cpp  Makefile  control_demo.cpp  main.cpp  test_constants_validation.cpp  test_hinguri_demo.cpp  test_hinguri_functions.cpp
test/dynamixel/: Hinguri_Demo.cpp  RobotControl.cpp  RobotControl.hpp  base_motor.h  dynamixel.h  macros.h  main.cpp  mx28_p2.h  mx64_p2.h  protocol2.h
test/linear_motor/: AXA.h  AXC.h  AXD.h  AXDev.h  AXHS.h  AXL.h  AXM.h  CLinear_actu.h  linear_motor.cpp  linear_motor.h
test/linear_motor/source/header/: AXA.h  AXC.h  AXDev.h  AXHS.h  AXM.h  CLinear_actu.h
test/matplot++/: bridge_convert_test.cpp  plot2d.cpp  plot3d.cpp  predict_world_pos_test.cpp  visualize_pingpong.cpp
test/opencv/: background_subtraction.cpp  color_finder.cpp  double_camera.cpp  gaussian_fitting.cpp  get_world_pos.cpp  lenna_test.cpp  measure_cor.cpp  multi_thread_fps.cpp  single_camera_test.cpp  sobel.cpp  thread_fps.cpp  top_camera_test.cpp  triple_camera.cpp  vision_demo.cpp  vision_test.cpp  world_to_camera.cpp
test/opencv/fps/: default_fps.cpp  thread_fps.cpp
test/opencv/tracking/: circularity.cpp  circularity_kalman.cpp  csrt.cpp  kalman_filter.cpp  moment.cpp  moment_and_kalman_filter.cpp  moment_kalman.cpp  sobel.cpp  sobel_tracker.cpp
